# grafana-prom

./: .gitignore  README.md  deploy_node_exporter.sh  docker-compose.yml
alert_handler/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt
alert_handler/app/: main.py
alert_handler/app/adapter/: sms.py
alert_handler/app/core/: config.py
alert_handler/app/routers/: sms.py
alert_handler/app/utils/: data_extractor.py  exceptions.py
grafana/provisioning/dashboards/: fastapi-dashboard.json  full-node-exporter.json  full_node_exporter.json  nginx.json  servers.json
grafana/provisioning/datasources/: datasource.yml
logger/: __init__.py  log_utils.py
loki/: loki-config.yaml
prometheus/: prometheus-sample.yml  prometheus.yml
