[project]
name = "alert-handler"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "msabour.official@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pysocks (>=1.7.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

